--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skeleton Fasilitas Dana - Seva Clone</title>
+    <title>Skeleton Gadai BPKB Mobil - Terbaik 2026</title>
     <style>
         /* --- RESET & VARIABLES --- */
         :root {
@@ -304,7 +304,7 @@
 <div class="mobile-container">
 
     <header>
-        <div class="logo">seva</div>
+        <div class="logo">GadaiBPKBMobil.com</div>
         <div class="nav-icons">
             <span>🔍</span>
             <span>👤</span>
@@ -356,7 +356,7 @@
                 <div class="step-num">2</div>
                 <div class="step-text">
                     <h4>Konfirmasi dengan tim kami</h4>
-                    <p>Tim SEVA akan menghubungi Anda untuk konfirmasi.</p>
+                    <p>Kami akan menghubungi Anda untuk konfirmasi.</p>
                 </div>
             </div>
             <div class="step-item">
@@ -468,15 +468,15 @@
         <h2 class="section-title" style="text-align: left;">Cerita Pengguna</h2>
         <div class="testi-card">
             <div class="quote-mark">“</div>
-            <div class="user-info" style="color: #f26522; font-size: 10px; letter-spacing: 1px;">SEVA.ID</div>
+            <div class="user-info" style="color: #f26522; font-size: 10px; letter-spacing: 1px;">GadaiBPKBmobil.com</div>
             <h3 style="margin-top: 5px; font-size: 16px;">"Solusi Mobil yang Terbukti Aman"</h3>
-            <p class="testi-text">Butuh modal? Langsung aja ke SEVA. Prosesnya mudah, cepat, dan pastinya aman karena dari Astra.</p>
+            <p class="testi-text">Butuh modal? Langsung aja ke GadaiBPKBmobil.com. Prosesnya mudah, cepat, dan pastinya aman karena dari Astra.</p>
             <div class="user-info">Joko Susilo<br><span style="font-weight: normal; color: #999;">Wiraswasta, Jakarta</span></div>
         </div>
     </section>
 
     <section class="form-section">
-        <h2>Yuk, diskusi dengan SEVA!</h2>
+        <h2>Yuk, diskusi dengan kami!</h2>
         <p>Isi form di bawah ini. Tim kami akan segera menghubungi Anda.</p>
 
         <form>
@@ -516,7 +516,7 @@
             
             <div class="checkbox-wrapper">
                 <input type="checkbox" id="promo">
-                <label for="promo">Saya bersedia menerima informasi layanan/produk terbaru dari SEVA.</label>
+                <label for="promo">Saya bersedia menerima informasi layanan/produk terbaru dari GadaiBPKBmobil.com.</label>
             </div>
 
             <button type="button" class="btn-submit">KIRIM</button>
@@ -572,7 +572,7 @@
             <p style="font-size: 10px;">Terdaftar dan diawasi oleh Otoritas Jasa Keuangan (OJK)</p>
         </div>
 
-        <p style="margin-top: 30px; text-align: center; font-size: 10px; opacity: 0.7;">&copy; 2024 Copyright SEVA</p>
+        <p style="margin-top: 30px; text-align: center; font-size: 10px; opacity: 0.7;">&copy; 2026 Copyright GadaiBPKBmobil.com</p>
     </footer>
 
     <a href="#" class="wa-float">
