--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 
     <section class="hero">
         <p style="font-size: 10px; opacity: 0.8; letter-spacing: 1px; margin-bottom: 5px;">FASILITAS DANA</p>
-        <h1>Pinjaman Cepat<br>Jaminan BPKB Mobil<br><span style="color: #ffd700;">Terpercaya dari Astra</span></h1>
+        <h1>Pinjaman Cepat<br>Jaminan BPKB Mobil<br><span style="color: #ffd700;">Terpercaya di Indonesia</span></h1>
         
         <div class="hero-stats">
             <div class="stat-item">
@@ -438,7 +438,7 @@
             </div>
             <div class="benefit-item">
                 <div class="benefit-icon">🛡️</div>
-                <div class="benefit-title">Terpercaya<br>Bagian dari Astra</div>
+                <div class="benefit-title">Terpercaya<br>Digital Marketing dari BFI Finance</div>
             </div>
             <div class="benefit-item">
                 <div class="benefit-icon">⚡</div>
@@ -470,7 +470,7 @@
             <div class="quote-mark">“</div>
             <div class="user-info" style="color: #f26522; font-size: 10px; letter-spacing: 1px;">GadaiBPKBmobil.com</div>
             <h3 style="margin-top: 5px; font-size: 16px;">"Solusi Mobil yang Terbukti Aman"</h3>
-            <p class="testi-text">Butuh modal? Langsung aja ke GadaiBPKBmobil.com. Prosesnya mudah, cepat, dan pastinya aman karena dari Astra.</p>
+            <p class="testi-text">Butuh modal? Langsung aja ke GadaiBPKBmobil.com. Prosesnya mudah, cepat, dan pastinya aman karena dari BFI Finance.</p>
             <div class="user-info">Joko Susilo<br><span style="font-weight: normal; color: #999;">Wiraswasta, Jakarta</span></div>
         </div>
     </section>
@@ -533,7 +533,7 @@
             </details>
             <details>
                 <summary>Apakah BPKB saya aman digadaikan?</summary>
-                <div class="faq-ans">Ya, aman. Kami bekerjasama dengan leasing terpercaya di bawah naungan Astra dan OJK.</div>
+                <div class="faq-ans">Ya, aman. Kami bekerjasama dengan leasing terpercaya di bawah naungan BFI dan OJK.</div>
             </details>
             <details>
                 <summary>Berapa lama proses pencairan dana?</summary>
@@ -555,7 +555,7 @@
             <div class="footer-logo-box" style="width: 40px; height: 40px;"></div>
             <div class="footer-logo-box" style="width: 80px; height: 40px;"></div>
         </div>
-        <p style="margin-bottom: 15px;">PT Astra Auto Digital. Menara Astra Lt. 55, Jl. Jend. Sudirman Kav 5-6, Jakarta 10220.</p>
+        <p style="margin-bottom: 15px;">BFI Tower - Sunburst CBD Lot 1.2, Jl. Kapt. Soebijanto Djojohadikusumo, BSD City, Tangerang Selatan.</p>
         
         <div class="footer-links">
             <a href="#">Tentang Kami</a>
