--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
             </div>
             <div class="benefit-item">
                 <div class="benefit-icon">🛡️</div>
-                <div class="benefit-title">Terpercaya<br>Digital Marketing dari BFI Finance</div>
+                <div class="benefit-title">Terpercaya<br>Sejak 1982</div>
             </div>
             <div class="benefit-item">
                 <div class="benefit-icon">⚡</div>
