--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skeleton Fasilitas Dana - Seva Clone</title>
+    <title>Skeleton Fasilitas Dana - GadaiBPKBmobil.com Clone</title>
     <style>
         /* --- RESET & VARIABLES --- */
         :root {
@@ -636,7 +636,7 @@
 
     <header>
         <div class="logo">
-            <img src="images/logo-seva.png" alt="SEVA Logo">
+            <img src="images/logo-GadaiBPKBmobil.com.png" alt="GadaiBPKBmobil.com Logo">
         </div>
         <div class="social-proof-slider" id="socialProofSlider">
             <div class="social-proof-wrapper">
@@ -655,7 +655,7 @@
 
     <section class="hero">
         <p style="font-size: 10px; opacity: 0.8; letter-spacing: 1px; margin-bottom: 5px;">FASILITAS DANA</p>
-        <h1>Pinjaman Cepat<br>Jaminan BPKB <span class="vehicle-slider" id="vehicleSlider">Mobil</span><br><span style="color: #ffd700;">Terpercaya dari Astra</span></h1>
+        <h1>Pinjaman Cepat<br>Gadai BPKB <span class="vehicle-slider" id="vehicleSlider">Mobil</span><br><span style="color: #ffd700;">Terbaik di Indonesia</span></h1>
         
         <div class="hero-stats">
             <div class="stat-item">
@@ -700,7 +700,7 @@
                 <div class="step-num">2</div>
                 <div class="step-text">
                     <h4>Konfirmasi dengan tim kami</h4>
-                    <p>Tim SEVA akan menghubungi Anda untuk konfirmasi.</p>
+                    <p>Tim GadaiBPKBmobil.com akan menghubungi Anda untuk konfirmasi.</p>
                 </div>
             </div>
             <div class="step-item">
@@ -1098,7 +1098,7 @@
                     <div class="testi-card">
                         <div class="star-rating">★★★★★</div>
                         <h3 style="margin-top: 5px; font-size: 16px;">"Solusi Mobil yang Terbukti Aman"</h3>
-                        <p class="testi-text">Butuh modal? Langsung aja ke SEVA. Prosesnya mudah, cepat, dan pastinya aman karena dari Astra.</p>
+                        <p class="testi-text">Butuh modal? Langsung aja ke GadaiBPKBmobil.com. Prosesnya mudah, cepat, dan pastinya aman karena dari Astra.</p>
                         <div class="user-info">Joko Susilo<br><span style="font-weight: normal; color: #999;">Wiraswasta, Jakarta</span></div>
                     </div>
                 </div>
@@ -1107,7 +1107,7 @@
                     <div class="testi-card">
                         <div class="star-rating">★★★★★</div>
                         <h3 style="margin-top: 5px; font-size: 16px;">"Pencairan Dana Super Cepat"</h3>
-                        <p class="testi-text">Saya butuh dana darurat untuk usaha. Dalam 2 hari, dana sudah cair ke rekening saya. Terima kasih SEVA!</p>
+                        <p class="testi-text">Saya butuh dana darurat untuk usaha. Dalam 2 hari, dana sudah cair ke rekening saya. Terima kasih GadaiBPKBmobil.com!</p>
                         <div class="user-info">Siti Rahayu<br><span style="font-weight: normal; color: #999;">Pengusaha, Surabaya</span></div>
                     </div>
                 </div>
@@ -1116,7 +1116,7 @@
                     <div class="testi-card">
                         <div class="star-rating">★★★★☆</div>
                         <h3 style="margin-top: 5px; font-size: 16px;">"Bunga Ringan, Tenor Panjang"</h3>
-                        <p class="testi-text">Cicilan per bulan sangat terjangkau. Tim SEVA juga sangat membantu menjelaskan semua prosesnya.</p>
+                        <p class="testi-text">Cicilan per bulan sangat terjangkau. Tim GadaiBPKBmobil.com juga sangat membantu menjelaskan semua prosesnya.</p>
                         <div class="user-info">Budi Santoso<br><span style="font-weight: normal; color: #999;">Karyawan, Bandung</span></div>
                     </div>
                 </div>
@@ -1125,7 +1125,7 @@
                     <div class="testi-card">
                         <div class="star-rating">★★★★★</div>
                         <h3 style="margin-top: 5px; font-size: 16px;">"BPKB Aman, Proses Transparan"</h3>
-                        <p class="testi-text">Awalnya ragu menggadaikan BPKB, tapi SEVA membuat saya yakin. Proses jelas dan BPKB benar-benar aman.</p>
+                        <p class="testi-text">Awalnya ragu menggadaikan BPKB, tapi GadaiBPKBmobil.com membuat saya yakin. Proses jelas dan BPKB benar-benar aman.</p>
                         <div class="user-info">Dewi Kusuma<br><span style="font-weight: normal; color: #999;">Ibu Rumah Tangga, Yogyakarta</span></div>
                     </div>
                 </div>
@@ -1134,7 +1134,7 @@
     </section>
 
     <section class="form-section">
-        <h2>Yuk, diskusi dengan SEVA!</h2>
+        <h2>Yuk, diskusi dengan GadaiBPKBmobil.com!</h2>
         <p>Isi form di bawah ini. Tim kami akan segera menghubungi Anda.</p>
 
         <form id="pengajuanForm">
@@ -1194,7 +1194,7 @@
             
             <div class="checkbox-wrapper">
                 <input type="checkbox" id="promo" name="promo">
-                <label for="promo">Saya bersedia menerima informasi layanan/produk terbaru dari SEVA.</label>
+                <label for="promo">Saya bersedia menerima informasi layanan/produk terbaru dari GadaiBPKBmobil.com.</label>
             </div>
 
             <button type="submit" class="btn-submit">KIRIM</button>
@@ -1250,7 +1250,7 @@
             <p style="font-size: 10px;">Terdaftar dan diawasi oleh Otoritas Jasa Keuangan (OJK)</p>
         </div>
 
-        <p style="margin-top: 30px; text-align: center; font-size: 10px; opacity: 0.7;">&copy; 2024 Copyright SEVA</p>
+        <p style="margin-top: 30px; text-align: center; font-size: 10px; opacity: 0.7;">&copy; 2024 Copyright GadaiBPKBmobil.com</p>
     </footer>
 
     <a href="#" class="wa-float">
