--- a/index.html
+++ b/index.html
@@ -1134,8 +1134,8 @@
     </section>
 
     <section class="form-section">
-        <h2>Yuk, diskusi dengan GadaiBPKBmobil.com!</h2>
-        <p>Isi form di bawah ini. Tim kami akan segera menghubungi Anda.</p>
+        <h2>GRATIS! Hitung simulasi cepat GadaiBPKBmobil.com!</h2>
+        <p>Isi form di bawah ini. Simulasi angsuran terkirim dalam waktu 1-2 menit.</p>
 
         <form id="pengajuanForm">
             <div class="form-group">
