--- a/index.html
+++ b/index.html
@@ -675,7 +675,7 @@
         <button class="btn-cta-hero">Ajukan Sekarang</button>
 
         <div class="hero-image">
-            <img src="assets/gbml.webp" alt="Happy Family with Car">
+            <img src="assets/gbmn.webp" alt="Happy Family with Car">
         </div>
     </section>
 
