--- a/index.html
+++ b/index.html
@@ -525,42 +525,58 @@
             </div>
 
             <div class="form-group">
-                <label class="form-label">Domisili Pengajuan (Kecamatan) <span class="required">*</span></label>
-                <div class="search-container">
-                    <input type="text" class="search-input" name="kecamatan" id="kecamatanSearch" placeholder="Cari kecamatan..." required>
-                    <span class="search-icon">🔍</span>
-                    <div class="search-results" id="searchResults"></div>
-                </div>
-            </div>
-
-            <div class="form-group">
                 <label class="form-label">BPKB yang Dijaminkan <span class="required">*</span></label>
                 <div class="radio-group">
-                    <label class="radio-item"><input type="radio" name="bpkb" value="mobil" checked required><span>Mobil</span></label>
-                    <label class="radio-item"><input type="radio" name="bpkb" value="motor" required><span>Motor</span></label>
-                    <label class="radio-item"><input type="radio" name="bpkb" value="truk" required><span>Truk</span></label>
+                    <label class="radio-item"><input type="radio" name="bpkb" value="mobil" id="bpkbMobil" checked required><span>Mobil</span></label>
+                    <label class="radio-item"><input type="radio" name="bpkb" value="motor" id="bpkbMotor" required><span>Motor</span></label>
+                    <label class="radio-item"><input type="radio" name="bpkb" value="truk" id="bpkbTruk" required><span>Truk</span></label>
                 </div>
             </div>
 
-            <!-- Upload Section -->
             <div class="form-group">
-                <label class="form-label">Upload Dokumen <span class="required">*</span></label>
-                <div class="upload-section">
-                    <div class="upload-grid">
-                        <div class="upload-box" onclick="document.getElementById('uploadFile').click()">
-                            <div class="upload-icon">📁</div>
-                            <div class="upload-text">Upload Gambar<br>BPKB/STNK</div>
-                            <img class="upload-preview" id="uploadPreview" alt="Preview">
-                            <input type="file" id="uploadFile" name="uploadFile" accept="image/*" required onchange="previewImage(this, 'uploadPreview')">
-                        </div>
-                        <div class="upload-box" onclick="document.getElementById('cameraFile').click()">
-                            <div class="upload-icon">📷</div>
-                            <div class="upload-text">Ambil Foto<br>Kendaraan</div>
-                            <img class="upload-preview" id="cameraPreview" alt="Preview">
-                            <input type="file" id="cameraFile" name="cameraFile" accept="image/*" capture="environment" required onchange="previewImage(this, 'cameraPreview')">
-                        </div>
-                    </div>
-                </div>
+                <label class="form-label">Merk Kendaraan <span class="required">*</span></label>
+                <select class="form-input" name="merk" id="merkKendaraan" required>
+                    <option value="">Pilih Merk</option>
+                </select>
+            </div>
+
+            <div class="form-group">
+                <label class="form-label">Tipe Kendaraan <span class="required">*</span></label>
+                <input type="text" class="form-input" name="tipe" placeholder="Contoh: Avanza 1.3 G MT" required>
+            </div>
+
+            <div class="form-group">
+                <label class="form-label">Tahun Kendaraan <span class="required">*</span></label>
+                <select class="form-input" name="tahun" id="tahunKendaraan" required>
+                    <option value="">Pilih Tahun</option>
+                </select>
+            </div>
+
+            <div class="form-group">
+                <label class="form-label">Provinsi <span class="required">*</span></label>
+                <select class="form-input" name="provinsi" id="provinsiSelect" required>
+                    <option value="">Pilih Provinsi</option>
+                </select>
+            </div>
+
+            <div class="form-group">
+                <label class="form-label">Kota/Kabupaten <span class="required">*</span></label>
+                <select class="form-input" name="kota" id="kotaSelect" required disabled>
+                    <option value="">Pilih Kota/Kabupaten</option>
+                </select>
+            </div>
+
+            <div class="form-group">
+                <label class="form-label">Kecamatan <span class="required">*</span></label>
+                <select class="form-input" name="kecamatan" id="kecamatanSelect" required disabled>
+                    <option value="">Pilih Kecamatan</option>
+                </select>
+            </div>
+
+            <div class="form-note" style="background: #fff3cd; padding: 15px; border-radius: 8px; margin-bottom: 20px; border-left: 4px solid #ffc107;">
+                <p style="font-size: 13px; margin: 0; color: #856404;">
+                    📸 <strong>Catatan:</strong> Foto BPKB, STNK, dan kendaraan akan diminta melalui WhatsApp setelah pengajuan dikirim.
+                </p>
             </div>
 
             <div class="checkbox-wrapper">
