--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skeleton Fasilitas Dana - GadaiBPKBmobil.com Clone</title>
+
+    <title>Pinjaman Dana Cepat Gadai BPKB Mobil Seluruh Indonesia | Bunga 0.79%</title>
+    <meta name="description" content="Pinjaman dana cepat dengan jaminan BPKB mobil, motor & truk. Bunga mulai 0.79% per bulan. Proses cepat, cair 1-3 hari.">
+
+    <link rel="preconnect" href="https://wa.me">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -12,7 +16,7 @@
 
     <header>
         <div class="logo">
-            <img src="images/logo-GadaiBPKBmobil.com.png" alt="GadaiBPKBmobil.com Logo">
+            <img src="images/logo-GadaiBPKBmobil.com.png" alt="GadaiBPKBmobil.com Logo" loading="lazy">
         </div>
         <div class="social-proof-slider" id="socialProofSlider">
             <div class="social-proof-wrapper">
@@ -51,7 +55,7 @@
         <button class="btn-cta-hero">Ajukan Sekarang</button>
 
         <div class="hero-image">
-            <img src="assets/gbml.webp" alt="Happy Family with Car">
+            <img src="assets/gbml.webp" alt="Happy Family with Car" loading="lazy">
         </div>
     </section>
 
@@ -60,7 +64,7 @@
         
         <!-- Phone Mockup - Normal Image -->
         <div class="phone-mockup">
-            <img src="images/phone-mockup.jpg" alt="Phone App">
+            <img src="images/phone-mockup.jpg" alt="Phone App" loading="lazy">
         </div>
 
         <!-- Timeline Steps -->
@@ -105,7 +109,7 @@
                 <div class="slider-slide">
                     <div class="promo-slide">
                         <div class="promo-img">
-                            <img src="images/promo-pendidikan.jpg" alt="Pendidikan">
+                            <img src="images/promo-pendidikan.jpg" alt="Pendidikan" loading="lazy">
                         </div>
                         <h3 style="font-size: 16px; margin-bottom: 10px;">Fasilitas Dana untuk<br><strong>Biaya Pendidikan</strong></h3>
                         <p style="font-size: 12px; color: #666; margin-bottom: 20px;">
@@ -135,7 +139,7 @@
                 <div class="slider-slide">
                     <div class="promo-slide">
                         <div class="promo-img">
-                            <img src="images/promo-usaha.jpg" alt="Usaha">
+                            <img src="images/promo-usaha.jpg" alt="Usaha" loading="lazy">
                         </div>
                         <h3 style="font-size: 16px; margin-bottom: 10px;">Fasilitas Dana untuk<br><strong>Modal Usaha</strong></h3>
                         <p style="font-size: 12px; color: #666; margin-bottom: 20px;">
@@ -165,7 +169,7 @@
                 <div class="slider-slide">
                     <div class="promo-slide">
                         <div class="promo-img">
-                            <img src="images/promo-rumah.jpg" alt="Rumah">
+                            <img src="images/promo-rumah.jpg" alt="Rumah" loading="lazy">
                         </div>
                         <h3 style="font-size: 16px; margin-bottom: 10px;">Fasilitas Dana untuk<br><strong>Renovasi Rumah</strong></h3>
                         <p style="font-size: 12px; color: #666; margin-bottom: 20px;">
@@ -195,7 +199,7 @@
                 <div class="slider-slide">
                     <div class="promo-slide">
                         <div class="promo-img">
-                            <img src="images/promo-kesehatan.jpg" alt="Kesehatan">
+                            <img src="images/promo-kesehatan.jpg" alt="Kesehatan" loading="lazy">
                         </div>
                         <h3 style="font-size: 16px; margin-bottom: 10px;">Fasilitas Dana untuk<br><strong>Biaya Kesehatan</strong></h3>
                         <p style="font-size: 12px; color: #666; margin-bottom: 20px;">
@@ -238,7 +242,7 @@
                         <div class="ribbon-badge">Best Offer</div>
                         <div class="car-preview">
                             <div class="car-img">
-                                <img src="images/car-avanza.jpg" alt="Toyota Avanza">
+                                <img src="images/car-avanza.jpg" alt="Toyota Avanza" loading="lazy">
                             </div>
                         </div>
                         <div class="sim-header">Toyota Avanza 2018</div>
@@ -284,7 +288,7 @@
                         <div class="ribbon-badge">Best Offer</div>
                         <div class="car-preview">
                             <div class="car-img">
-                                <img src="images/car-innova.jpg" alt="Toyota Innova">
+                                <img src="images/car-innova.jpg" alt="Toyota Innova" loading="lazy">
                             </div>
                         </div>
                         <div class="sim-header">Toyota Innova 2019</div>
@@ -330,7 +334,7 @@
                         <div class="ribbon-badge">Best Offer</div>
                         <div class="car-preview">
                             <div class="car-img">
-                                <img src="images/car-xpander.jpg" alt="Mitsubishi Xpander">
+                                <img src="images/car-xpander.jpg" alt="Mitsubishi Xpander" loading="lazy">
                             </div>
                         </div>
                         <div class="sim-header">Mitsubishi Xpander 2020</div>
@@ -376,7 +380,7 @@
                         <div class="ribbon-badge">Best Offer</div>
                         <div class="car-preview">
                             <div class="car-img">
-                                <img src="images/car-hrv.jpg" alt="Honda HR-V">
+                                <img src="images/car-hrv.jpg" alt="Honda HR-V" loading="lazy">
                             </div>
                         </div>
                         <div class="sim-header">Honda HR-V 2019</div>
