--- a/index.html
+++ b/index.html
@@ -18,18 +18,10 @@
         <div class="logo">
             <img src="images/logo-GadaiBPKBmobil.com.png" alt="GadaiBPKBmobil.com Logo" loading="lazy">
         </div>
-        <div class="social-proof-slider" id="socialProofSlider">
-            <div class="social-proof-wrapper">
-                <div class="social-proof-slide">
-                    <span>📊 <strong id="simCount">456</strong> simulasi terkirim hari ini</span>
-                </div>
-                <div class="social-proof-slide">
-                    <span>⏳ <strong id="processCount">189</strong> pengajuan diproses hari ini</span>
-                </div>
-                <div class="social-proof-slide">
-                    <span>✅ <strong id="approveCount">99</strong> pengajuan approved hari ini</span>
-                </div>
-            </div>
+        <div class="social-proof">
+    <span id="socialIcon">📩</span>
+    <span id="socialText"></span>
+</div>
         </div>
     </header>
 
