--- a/index.html
+++ b/index.html
@@ -18,10 +18,15 @@
         <div class="logo">
             <img src="images/logo-GadaiBPKBmobil.com.png" alt="GadaiBPKBmobil.com Logo" loading="lazy">
         </div>
-        <div class="social-proof">
-    <span id="socialIcon">📩</span>
-    <span id="socialText"></span>
-</div>
+        <div style="display: flex; flex-direction: column; align-items: flex-end; gap: 5px;">
+            <div class="social-proof">
+                <span id="socialIcon">📩</span>
+                <span id="socialText"></span>
+            </div>
+            <div style="font-size: 10px; color: #666; font-weight: 500;">
+                📅 <span id="currentDate"></span>
+            </div>
+        </div>
     </header>
 
     <section class="hero">
