--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <header>
         <div class="logo">
-            <img src="images/logo-GadaiBPKBmobil.com.png" alt="GadaiBPKBmobil.com Logo" loading="lazy">
+            <img src="assets/logo.webp" alt="GadaiBPKBmobil.com Logo" loading="lazy">
         </div>
         <div style="display: flex; flex-direction: column; align-items: flex-end; gap: 5px;">
             <div class="social-proof">
