--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
             </div>
             <div class="stat-item">
                 <i>⚡</i>
-                <span>Pencairan<br><strong>Rp20 Juta</strong></span>
+                <span>Pencairan<br><strong>1x24 Jam</strong></span>
             </div>
             <div class="stat-item">
-                <i>📅</i>
+                <i>⏳</i>
                 <span>Tenor Hingga<br><strong>48 Bulan</strong></span>
             </div>
         </div>
