--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <section class="hero">
         <p style="font-size: 10px; opacity: 0.8; letter-spacing: 1px; margin-bottom: 5px;">SOLUSI SEMUA KEBUTUHAN</p>
-        <h1>Pinjaman Dana Cepat<br>Gadai BPKB <span class="vehicle-slider" id="vehicleSlider">Mobil</span><br><span style="color: #ffd700;">Cover Seluruh Indonesia</span></h1>
+        <h1>Pinjaman Dana Cepat<br>Gadai BPKB <span class="vehicle-slider" id="vehicleSlider">Mobil</span><br><span style="color: #ffd700;">Melayani Seluruh Indonesia</span></h1>
         
         <div class="hero-stats">
             <div class="stat-item">
