--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
         </div>
 
-        <button class="btn-cta-hero">Ajukan Sekarang</button>
+        <button class="btn-cta-hero">Hitung Simulasi Gratis</button>
 
         <div class="hero-image">
             <img src="assets/gbml.webp" alt="Happy Family with Car" loading="lazy">
@@ -274,7 +274,7 @@
                                     <span>Derek 24/7</span>
                                 </div>
                             </div>
-                            <button class="btn-cta-hero" style="margin-bottom: 0;">Ajukan Sekarang</button>
+                            <button class="btn-cta-hero" style="margin-bottom: 0;">Hitung Simulasi Gratis</button>
                         </div>
                     </div>
                 </div>
@@ -320,7 +320,7 @@
                                     <span>Derek 24/7</span>
                                 </div>
                             </div>
-                            <button class="btn-cta-hero" style="margin-bottom: 0;">Ajukan Sekarang</button>
+                            <button class="btn-cta-hero" style="margin-bottom: 0;">Hitung Simulasi Gratis</button>
                         </div>
                     </div>
                 </div>
@@ -366,7 +366,7 @@
                                     <span>Derek 24/7</span>
                                 </div>
                             </div>
-                            <button class="btn-cta-hero" style="margin-bottom: 0;">Ajukan Sekarang</button>
+                            <button class="btn-cta-hero" style="margin-bottom: 0;">Hitung Simulasi Gratis</button>
                         </div>
                     </div>
                 </div>
@@ -412,7 +412,7 @@
                                     <span>Derek 24/7</span>
                                 </div>
                             </div>
-                            <button class="btn-cta-hero" style="margin-bottom: 0;">Ajukan Sekarang</button>
+                            <button class="btn-cta-hero" style="margin-bottom: 0;">Hitung Simulasi Gratis</button>
                         </div>
                     </div>
                 </div>
@@ -451,7 +451,7 @@
                 <div class="benefit-desc">Untuk segala kebutuhan</div>
             </div>
         </div>
-        <button class="btn-cta-hero">Ajukan Sekarang</button>
+        <button class="btn-cta-hero">Hitung Simulasi Gratis</button>
     </section>
 
     <section class="section">
