--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Pinjaman Dana Cepat Gadai BPKB Mobil Seluruh Indonesia | Bunga 0.79%</title>
+    <title>Butuh Dana Cepat? Gadai BPKB Mobil Seluruh Indonesia | Bunga 0.79%</title>
     <meta name="description" content="Pinjaman dana cepat dengan jaminan BPKB mobil, motor & truk. Bunga mulai 0.79% per bulan. Proses cepat, cair 1-3 hari.">
 
     <link rel="preconnect" href="https://wa.me">
