--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <span id="socialText"></span>
             </div>
             <div style="font-size: 10px; color: #666; font-weight: 500;">
-                📅 <span id="currentDate"></span>
+                <span id="currentDate"></span>
             </div>
         </div>
     </header>
@@ -56,7 +56,7 @@
     </section>
 
     <section class="section">
-        <h2 class="section-title">Cara Mudah Pengajuan Pinjaman</h2>
+        <h2 class="section-title">BPKB Jadi Duit, Proses Gak Ribet</h2>
         
         <!-- Phone Mockup - Normal Image -->
         <div class="phone-mockup">
