--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <section class="hero">
         <p style="font-size: 10px; opacity: 0.8; letter-spacing: 1px; margin-bottom: 5px;">SOLUSI SEMUA KEBUTUHAN</p>
-        <h1>Pinjaman Dana Cepat<br>Gadai BPKB <span class="vehicle-slider" id="vehicleSlider">Mobil</span><br><span style="color: #ffd700;">Melayani Seluruh Indonesia</span></h1>
+        <h1>Butuh Dana Cepat?<br>Gadai BPKB <span class="vehicle-slider" id="vehicleSlider">Mobil</span><br><span style="color: #ffd700;">Melayani Seluruh Indonesia</span></h1>
         
         <div class="hero-stats">
             <div class="stat-item">
@@ -68,28 +68,28 @@
             <div class="step-item">
                 <div class="step-num">1</div>
                 <div class="step-text">
-                    <h4>Kirim pengajuan di sini</h4>
-                    <p>Isi formulir singkat hanya 2 menit.</p>
+                    <h4>Cek Estimasi Pencairan</h4>
+                    <p>Isi formulir singkat hanya 45 detik.</p>
                 </div>
             </div>
             <div class="step-item">
                 <div class="step-num">2</div>
                 <div class="step-text">
-                    <h4>Konfirmasi dengan tim kami</h4>
-                    <p>Tim GadaiBPKBmobil.com akan menghubungi Anda untuk konfirmasi.</p>
+                    <h4>Pastikan Data Sudah Benar</h4>
+                    <p>Tim GadaiBPKBmobil.com akan respon instan untuk konfirmasi.</p>
                 </div>
             </div>
             <div class="step-item">
                 <div class="step-num">3</div>
                 <div class="step-text">
                     <h4>Pengajuan diproses</h4>
-                    <p>Proses survei kendaraan dan validasi dokumen.</p>
+                    <p>Proses cek kendaraan dan validasi dokumen.</p>
                 </div>
             </div>
             <div class="step-item">
                 <div class="step-num">4</div>
                 <div class="step-text">
-                    <h4>Dana cair</h4>
+                    <h4>Pencairan</h4>
                     <p>Dana ditransfer ke rekening Anda.</p>
                 </div>
             </div>
@@ -98,7 +98,7 @@
 
     <!-- SLIDER: PENDIDIKAN/PROMO -->
     <section class="section" style="background-color: #f9f9f9;">
-        <h2 class="section-title">Kebutuhan Dana Anda</h2>
+        <h2 class="section-title">Dana Cepat Tanpa Ribet</h2>
         <div class="slider-container" id="promoSlider">
             <div class="slider-wrapper">
                 <!-- Slide 1: Pendidikan -->
@@ -107,7 +107,7 @@
                         <div class="promo-img">
                             <img src="images/promo-pendidikan.jpg" alt="Pendidikan" loading="lazy">
                         </div>
-                        <h3 style="font-size: 16px; margin-bottom: 10px;">Fasilitas Dana untuk<br><strong>Biaya Pendidikan</strong></h3>
+                        <h3 style="font-size: 16px; margin-bottom: 10px;">Solusi Dana untuk<br><strong>Biaya Pendidikan</strong></h3>
                         <p style="font-size: 12px; color: #666; margin-bottom: 20px;">
                             Wujudkan cita-cita anak Anda dengan dana pendidikan cepat cair. Bunga ringan dan aman.
                         </p>
@@ -137,7 +137,7 @@
                         <div class="promo-img">
                             <img src="images/promo-usaha.jpg" alt="Usaha" loading="lazy">
                         </div>
-                        <h3 style="font-size: 16px; margin-bottom: 10px;">Fasilitas Dana untuk<br><strong>Modal Usaha</strong></h3>
+                        <h3 style="font-size: 16px; margin-bottom: 10px;">Solusi Dana untuk<br><strong>Modal Usaha</strong></h3>
                         <p style="font-size: 12px; color: #666; margin-bottom: 20px;">
                             Kembangkan bisnis Anda dengan modal tambahan. Proses cepat, tanpa ribet.
                         </p>
@@ -167,7 +167,7 @@
                         <div class="promo-img">
                             <img src="images/promo-rumah.jpg" alt="Rumah" loading="lazy">
                         </div>
-                        <h3 style="font-size: 16px; margin-bottom: 10px;">Fasilitas Dana untuk<br><strong>Renovasi Rumah</strong></h3>
+                        <h3 style="font-size: 16px; margin-bottom: 10px;">Solusi Dana untuk<br><strong>Renovasi Rumah</strong></h3>
                         <p style="font-size: 12px; color: #666; margin-bottom: 20px;">
                             Wujudkan rumah impian dengan dana renovasi. Tenor panjang, cicilan ringan.
                         </p>
@@ -197,7 +197,7 @@
                         <div class="promo-img">
                             <img src="images/promo-kesehatan.jpg" alt="Kesehatan" loading="lazy">
                         </div>
-                        <h3 style="font-size: 16px; margin-bottom: 10px;">Fasilitas Dana untuk<br><strong>Biaya Kesehatan</strong></h3>
+                        <h3 style="font-size: 16px; margin-bottom: 10px;">Solusi Dana untuk<br><strong>Biaya Kesehatan</strong></h3>
                         <p style="font-size: 12px; color: #666; margin-bottom: 20px;">
                             Siapkan dana darurat kesehatan. Pencairan cepat untuk kebutuhan mendesak.
                         </p>
@@ -244,7 +244,7 @@
                         <div class="sim-header">Toyota Avanza 2018</div>
                         <div class="sim-body">
                             <div class="price-row">
-                                <div class="price-label">Total Pencairan</div>
+                                <div class="price-label">Tanpa Potongan</div>
                                 <div class="price-value">Rp 100.000.000</div>
                             </div>
                             <div class="price-row">
@@ -290,7 +290,7 @@
                         <div class="sim-header">Toyota Innova 2019</div>
                         <div class="sim-body">
                             <div class="price-row">
-                                <div class="price-label">Total Pencairan</div>
+                                <div class="price-label">Tanpa Potongan</div>
                                 <div class="price-value">Rp 150.000.000</div>
                             </div>
                             <div class="price-row">
@@ -336,7 +336,7 @@
                         <div class="sim-header">Mitsubishi Xpander 2020</div>
                         <div class="sim-body">
                             <div class="price-row">
-                                <div class="price-label">Total Pencairan</div>
+                                <div class="price-label">Tanpa Potongan</div>
                                 <div class="price-value">Rp 120.000.000</div>
                             </div>
                             <div class="price-row">
@@ -382,7 +382,7 @@
                         <div class="sim-header">Honda HR-V 2019</div>
                         <div class="sim-body">
                             <div class="price-row">
-                                <div class="price-label">Total Pencairan</div>
+                                <div class="price-label">Tanpa Potongan</div>
                                 <div class="price-value">Rp 180.000.000</div>
                             </div>
                             <div class="price-row">
@@ -422,7 +422,7 @@
     </section>
 
     <section class="section">
-        <h2 class="section-title">Keuntungan Fasilitas Dana BPKB</h2>
+        <h2 class="section-title">Keuntungan Solusi Dana BPKB</h2>
         <div class="benefits-grid">
             <div class="benefit-item">
                 <div class="benefit-icon">🌸</div>
@@ -661,8 +661,8 @@
         
         <div class="faq-container">
             <details>
-                <summary>Apa itu Fasilitas Dana?</summary>
-                <div class="faq-ans">Fasilitas dana adalah layanan pinjaman tunai dengan agunan BPKB mobil.</div>
+                <summary>Apa itu Solusi Dana?</summary>
+                <div class="faq-ans">Solusi dana adalah layanan pinjaman tunai dengan agunan BPKB mobil.</div>
             </details>
             <details>
                 <summary>Apakah BPKB saya aman digadaikan?</summary>
