--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="step-item">
                 <div class="step-num">3</div>
                 <div class="step-text">
-                    <h4>Pengajuan diproses</h4>
+                    <h4>Pengajuan Diproses</h4>
                     <p>Proses cek kendaraan dan validasi dokumen.</p>
                 </div>
             </div>
@@ -98,7 +98,7 @@
 
     <!-- SLIDER: PENDIDIKAN/PROMO -->
     <section class="section" style="background-color: #f9f9f9;">
-        <h2 class="section-title">Dana Cepat Tanpa Ribet</h2>
+        <h2 class="section-title">Dana Cepat Tanpa Drama</h2>
         <div class="slider-container" id="promoSlider">
             <div class="slider-wrapper">
                 <!-- Slide 1: Pendidikan -->
